--- a/views/billing.ejs
+++ b/views/billing.ejs
@@ -200,7 +200,7 @@
 
     <!-- Js Files -->
     <%- include('includes/scripts.ejs') %>
-    <script src="js/card.js"></script>
-    <script src="js/calculate.js"></script>
+    <script src="/js/card.js"></script>
+    <script src="/js/calculate.js"></script>
   </body>
 </html>
