--- a/views/includes/navdash.ejs
+++ b/views/includes/navdash.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar">
     <div class="container px-0">
-        <a class="navbar-brand" href=""><img src="images/logo.png" alt="Logo"></a>
+        <a class="navbar-brand" href="/"><img src="images/logo.png" alt="Logo"></a>
         <span class="navbar-text text-right">
         <i class="bi bi-person"></i>&nbsp;<%= email %>
         </span>
