Added verfication mail

--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -9,14 +9,12 @@
 
       <div id="content" class="log-forn">
         <div class="login-form">
-          <h2>Login </h2>
+          <h2>Admin Login </h2>
           <form action="/admin/signin" method="POST" class="form-feilds">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>" >
             <input type="email" name="email" value="<%= email %>" placeholder="Email">
             <input type="password" name="pass" placeholder="Password">
             <div class="d-flex align-items-center justify-content-between mb-4">
-              <span><input type="checkbox">Remember me</span>
-              <span><a href="/passwordchange" class="text-white">Forgot Password?</a></span>
             </div>
             <% if(error){ %>
               <div>
