--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,7 @@
             <input type="email" name="email" value="<%= email %>" placeholder="Email">
             <input type="password" name="pass" placeholder="Password">
             <div class="d-flex align-items-center justify-content-between mb-4">
-              <span><input type="checkbox">Remember me</span>
+              <span><a href='/signup'>Sign Up</a></span>
               <span><a href="/passwordchange" class="text-white">Forgot Password?</a></span>
             </div>
             <% if(error){ %>
