--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -22,6 +22,7 @@
               </div>
             <% } %>
             <button>Sign Up</button>
+            <a href="/signin">Sing In</a>
           </form>
         </div>
       </div>
